--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@ a:hover {
 
 p {
     font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
+    font-size: 17px;
     line-height: 21px;
+    font-weight: bold;
 }
 
 
